refactor: change method target to static
Co-authored-by: Moderne <team@moderne.io>