@@ -1,11 +1,11 @@
 package com.cerner.bunsen.r4.codes;
 
 import com.cerner.bunsen.codes.Value;
-import com.google.common.collect.ImmutableSet;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.text.MessageFormat;
 import java.util.List;
+import java.util.Set;
 import org.apache.spark.sql.Dataset;
 import org.apache.spark.sql.SparkSession;
 import org.hl7.fhir.r4.model.ValueSet;
@@ -278,7 +278,7 @@ public class ValueSetsTest {
         .writeToDatabase(database);
 
     Dataset<Value> latest = ValueSets.getFromDatabase(spark, database)
-        .getLatestValues(ImmutableSet.of("urn:cerner:valueset:newvalueset",
+        .getLatestValues(Set.of("urn:cerner:valueset:newvalueset",
             "urn:cerner:valueset:othervalueset"),
             true);
 
@@ -315,7 +315,7 @@ public class ValueSetsTest {
     ValueSets valueSets = ValueSets.getFromDatabase(spark, database);
 
     Dataset<Value> latestWithExperimental = valueSets.getLatestValues(
-        ImmutableSet.of("urn:cerner:valueset:expvalueset"),
+        Set.of("urn:cerner:valueset:expvalueset"),
         true);
 
     // We include experimental versions, so we should see that.
@@ -325,7 +325,7 @@ public class ValueSetsTest {
             .count());
 
     Dataset<Value> latestWithoutExperimental = valueSets.getLatestValues(
-            ImmutableSet.of("urn:cerner:valueset:expvalueset"),
+            Set.of("urn:cerner:valueset:expvalueset"),
             false);
 
     // Version 1 is not experimental, so we should see it.
@@ -336,7 +336,7 @@ public class ValueSetsTest {
 
     // Loading a map with only experimental versions should find nothing.
     Dataset<Value> onlyExperimentalValueSets = valueSets.getLatestValues(
-        ImmutableSet.of("urn:cerner:valueset:otherexpvalueset"),
+        Set.of("urn:cerner:valueset:otherexpvalueset"),
         false);
 
     Assert.assertEquals(0, onlyExperimentalValueSets.count());
